moved database related code to database folder
